8-12-20:
- Renamed settings module to storedsettings
- Created settings module for the settings GUI
- Changed FG and BG color settings in storedsettings to be universal instead of specific to each clock
- Created settings GUI accessed through the main menu
- Created basic FG and BG color changer in setttimer to display how color changes will look
- Changed method names in all three clocks (draw_timer changed to draw_clock; redraw_timer_label changed to redraw_clock_label)
- Set reset methods in all three clocks to simply redraw the clocks
8-13-20:
- Fixed bug where stopwatch wouldn't roll over to an hour properly
- User settings are now applied to clocks once clock is reopened
- Clocks continue running when user goes back to main menu (design choice; which is better?)
- Now saves color settings that the user changes. Still need to debug this functionality more thoroughly.
- Created module ConfigManager to manage creation and modification of usersettings.ini
- Changed values in storedsettings.py to pull from ConfigManager
8-14-20:
- Added pomo time settings to settings menu (still need to style, label, validate, etc.)
- Pomo time settings are now saved
8-16-20:
- Organized settings menu
- Color changing buttons now are just squares of color
- Fixed bug when changing colors where you open color picker and immediately cancel/x out
- Fixed how configmanager saves pomo timer settings
8-17-20:
- Bound start/pause for open timer to enter
- Created TaskDAO (and task db of course)
- Created TaskGUI (debug further)
8-18-20:
- Fixed bug in pomo where left button would say "skip" when break timer finished
8-22-20:
- Created method to record the time spent on an activity in seconds.
- fixed stopwatch bug
- added autosave to settings
- Created Session class
- Created SessionDAO class
- Implemented saving sessions to the database
- Added autosave setting
- Added dropdown for selecting current task to main menu
8-23-20:
- Started stylizing widgets (settings and mainmenu done)